[package]
name = "kwhash"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = "0.11.1"
once_cell = "1.17.1"
tinyphf = { path = "tinyphf" }

[dev-dependencies]
criterion = "0.4"

[build-dependencies]
phf_codegen = "0.11.1"
tinyphf = { path = "tinyphf" }

[[bench]]
name = "compare_hashes"
harness = false